--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -60,7 +60,38 @@
   border: 3px solid var(--primary);
 }
 
-
+@-webkit-keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+    transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 1;
+  }
+}
+@keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+    transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 1;
+  }
+}
 
 
 
@@ -82,4 +113,9 @@
   border: 1px solid #4A4D53;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
   font-weight: 500;
+}
+/*animations*/
+.swing-in-top-fwd {
+  -webkit-animation: swing-in-top-fwd .8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 0s both;
+  animation: swing-in-top-fwd .8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 0s both;
 }
